--- a/views/deleted.html.twig
+++ b/views/deleted.html.twig
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="utf-8">
     <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/css/styles.css" rel="stylesheet" type="text/css">
-    <title></title>
+    <title>Delete Address Book Success</title>
   </head>
+
   <body>
-    
+    <div class="container">
+      <h1>Address Book<h1>
+      <h3>You have successfully emptied your address book.</h3>
+      <button class="btn-primary btn-lg"><a href="/">View Your Address Book</a></button>
+    </div>
   </body>
+
 </html>
