--- a/views/deleted.html.twig
+++ b/views/deleted.html.twig
@@ -10,9 +10,11 @@
 
   <body>
     <div class="container">
-      <h1>Address Book<h1>
-      <h3>You have successfully emptied your address book.</h3>
-      <button class="btn-primary btn-lg"><a href="/">View Your Address Book</a></button>
+      <div class="page-header">
+        <h1>Address Book</h1>
+      </div>
+      <div class="btn btn-primary-outline btn-lg" role="alert">You have successfully emptied your address book.</div>
+      <button class="btn btn-lg btn-default"><a href="/">View Your Address Book</a></button>
     </div>
   </body>
 
