--- a/views/deleted.html.twig
+++ b/views/deleted.html.twig
@@ -13,8 +13,12 @@
       <div class="page-header">
         <h1>Address Book</h1>
       </div>
-      <div class="btn btn-primary-outline btn-lg" role="alert">You have successfully emptied your address book.</div>
-      <button class="btn btn-lg btn-default"><a href="/">View Your Address Book</a></button>
+      <div class="row">
+        <div class="col-xs-6 col-xs-offset-3">
+          <div class="alert alert-info" role="alert">You have successfully emptied your address book.</div>
+          <button class="btn btn-lg btn-default center-block"><a href="/">View Your Address Book</a></button>
+        </div>
+      </div>
     </div>
   </body>
 
