--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,20 +1,28 @@
 h1 {
   text-align: center;
-  color: #004d00;
+  color: #007acc;
   font-size: 3.5em;
 }
 
-.alert {
+.alert{
   text-align: center;
   font-size: 1.5em;
 }
 
-#titles {
+h4 {
   text-align: center;
-  color: #004d00;
+  color: #007acc;
   font-size: 1.4em;
 }
 
 ul {
   list-style: none;
+}
+
+.form-group {
+  margin-left: 10px;
+}
+
+.container {
+  text-align: center;
 }
